[project]
name = "inventory-sorter"
version = "0.1.0"
description = "Safely organize files from a source tree into a dated destination library."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
exif = ["Pillow>=10"]

[project.scripts]
inventory-sorter = "inventory_sorter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

